--- a/src/Template/__header.html
+++ b/src/Template/__header.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<body>
 <nav class="navbar navbar-expand-lg bg-light" data-bs-theme="light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">MVC</a>
@@ -13,21 +14,29 @@
         <div class="collapse navbar-collapse" id="navbarColor03">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Accueil
-                        <span class="visually-hidden">(current)</span>
-                    </a>
+                    <a class="nav-link active" href="/my-little-mvc">Accueil</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="shop">Catalogue</a>
                 </li>
+                <?php if (isset($_SESSION['user'])) : ?>
+                <li class="nav-item">
+                    <a href="profile" class="nav-link">Mon Compte</a>
+                </li>
+                <li class="nav-item">
+                    <a href="logout" class="btn btn-outline-primary">Déconnexion</a>
+                </li>
+                <?php else : ?>
                 <li class="nav-item">
                     <a href="register" class="btn btn-outline-primary">M'inscrire</a>
                 </li>
                 <li class="nav-item">
                     <a href="login" class="btn btn-outline-primary">Me connecter</a>
                 </li>
+                <?php endif; ?>
             </ul>
-
         </div>
     </div>
-</nav></html>
+</nav>
+</body>
+</html>
