--- a/src/Template/__header.html
+++ b/src/Template/__header.html
@@ -33,6 +33,9 @@
                 <li class="nav-item">
                     <a href="/my-little-mvc/login" class="btn btn-outline-primary">Me connecter</a>
                 </li>
+                <li class="nav-item">
+                    <a href="/my-little-mvc/admin/users/list" class="btn btn-primary">Admin</a>
+                </li>
                 <?php endif; ?>
             </ul>
         </div>
